violating_resources/general/requiredlabels/samples/pci-dss-3.2.1/example_allowed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allowed-deployment
  labels:
    pci-dss-firewall-audit: "pci-dss-2022q1"
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
