violating_resources/general/requiredlabels/samples/pci-dss-3.2.1/1.1.4_pci-resources-have-required-labels.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: pci-resources-have-required-labels
  annotations:
    description: "Ensures requirements for a firewall by requiring all apps to contain a specified label."
    bundles.validator.forsetisecurity.org/pci-dss-v3.2.1: 1.1.4
    policy.library/doc-gen: "do_not_document"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds:
        - "ReplicaSet"
        - "Deployment"
        - "StatefulSet"
        - "DaemonSet"
    excludedNamespaces:
      - kube-system
      - kube-node-lease
      - kube-public
      - gatekeeper-system
      - config-management-system
      - config-management-monitoring
      - resource-group-system
      - gke-connect
      - istio-system
      - asm-system
  parameters:
    message: "All apps must have a valid pci-dss-firewall-audit label."
    labels:
      - key: pci-dss-firewall-audit
        allowedRegex: "^pci-dss-[0-9]{4}q[1-4]$"
